// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppToasts /> renders UpgradeToastMessage when alertStore.info.upgradeReady=true 1`] = `
"
<li class=\\"nav-item components-navbar-button ml-auto\\">
  <div class=\\" tooltip-trigger\\">
    <span id=\\"components-notifications\\"
          class=\\"nav-link cursor-pointer\\"
    >
      <svg aria-hidden=\\"true\\"
           focusable=\\"false\\"
           data-prefix=\\"fas\\"
           data-icon=\\"info-circle\\"
           class=\\"svg-inline--fa fa-info-circle fa-w-16 fa-fw \\"
           role=\\"img\\"
           xmlns=\\"http://www.w3.org/2000/svg\\"
           viewbox=\\"0 0 512 512\\"
      >
        <path fill=\\"currentColor\\"
              d=\\"M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z\\"
        >
        </path>
      </svg>
    </span>
  </div>
</li>
<div class=\\"toast-container d-flex flex-column\\">
  <div class=\\"m-1 bg-toast text-white rounded shadow components-animation-fade-appear components-animation-fade-appear-active\\">
    <div class=\\"d-flex flex-row p-1\\">
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-center fa-stack fa-2x\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"circle\\"
             class=\\"svg-inline--fa fa-circle fa-w-16 fa-stack-2x text-success\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z\\"
          >
          </path>
        </svg>
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"arrow-up\\"
             class=\\"svg-inline--fa fa-arrow-up fa-w-14 fa-stack-1x text-white\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 448 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z\\"
          >
          </path>
        </svg>
      </div>
      <div class=\\"flex-shrink-1 flex-grow-1 align-self-center ms-1 me-3 text-break text-wrap\\">
        <div>
          <div>
            New version available, updates are paused until this page auto reloads
          </div>
          <div>
            <code>
              unknown
            </code>
          </div>
          <div class=\\"d-flex flex-row-reverse\\">
            <button type=\\"button\\"
                    class=\\"btn btn-sm btn-light\\"
            >
              <svg aria-hidden=\\"true\\"
                   focusable=\\"false\\"
                   data-prefix=\\"fas\\"
                   data-icon=\\"stop\\"
                   class=\\"svg-inline--fa fa-stop fa-w-14 me-2\\"
                   role=\\"img\\"
                   xmlns=\\"http://www.w3.org/2000/svg\\"
                   viewbox=\\"0 0 448 512\\"
              >
                <path fill=\\"currentColor\\"
                      d=\\"M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z\\"
                >
                </path>
              </svg>
              Stop auto-reload
            </button>
          </div>
          <div class=\\"mt-2 progress bg-dark\\"
               style=\\"height: 2px;\\"
          >
            <div class=\\"progress-bar bg-white toast-upgrade-progressbar\\"
                 role=\\"progressbar\\"
                 style=\\"width: 100px;\\"
            >
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<AppToasts /> renders upstream error toasts for each unhealthy upstream 1`] = `
"
<li class=\\"nav-item components-navbar-button ml-auto\\">
  <div class=\\" tooltip-trigger\\">
    <span id=\\"components-notifications\\"
          class=\\"nav-link cursor-pointer\\"
    >
      <svg aria-hidden=\\"true\\"
           focusable=\\"false\\"
           data-prefix=\\"fas\\"
           data-icon=\\"info-circle\\"
           class=\\"svg-inline--fa fa-info-circle fa-w-16 fa-fw \\"
           role=\\"img\\"
           xmlns=\\"http://www.w3.org/2000/svg\\"
           viewbox=\\"0 0 512 512\\"
      >
        <path fill=\\"currentColor\\"
              d=\\"M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z\\"
        >
        </path>
      </svg>
    </span>
  </div>
</li>
<div class=\\"toast-container d-flex flex-column\\">
  <div class=\\"m-1 bg-toast text-white rounded shadow components-animation-fade-appear components-animation-fade-appear-active\\">
    <div class=\\"d-flex flex-row p-1\\">
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-center fa-stack fa-2x\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"circle\\"
             class=\\"svg-inline--fa fa-circle fa-w-16 fa-stack-2x text-danger\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z\\"
          >
          </path>
        </svg>
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"exclamation\\"
             class=\\"svg-inline--fa fa-exclamation fa-w-6 fa-stack-1x text-white\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 192 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z\\"
          >
          </path>
        </svg>
      </div>
      <div class=\\"flex-shrink-1 flex-grow-1 align-self-center ms-1 me-3 text-break text-wrap\\">
        <div>
          <div>
            Alertmanager am1 raised an error
          </div>
          <div>
            <code>
              error 1
            </code>
          </div>
        </div>
      </div>
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-top\\">
        <span class=\\"badge components-label cursor-pointer with-click with-click-dark\\">
          <svg aria-hidden=\\"true\\"
               focusable=\\"false\\"
               data-prefix=\\"fas\\"
               data-icon=\\"times\\"
               class=\\"svg-inline--fa fa-times fa-w-11 \\"
               role=\\"img\\"
               xmlns=\\"http://www.w3.org/2000/svg\\"
               viewbox=\\"0 0 352 512\\"
          >
            <path fill=\\"currentColor\\"
                  d=\\"M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z\\"
            >
            </path>
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div class=\\"m-1 bg-toast text-white rounded shadow components-animation-fade-appear components-animation-fade-appear-active\\">
    <div class=\\"d-flex flex-row p-1\\">
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-center fa-stack fa-2x\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"circle\\"
             class=\\"svg-inline--fa fa-circle fa-w-16 fa-stack-2x text-danger\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z\\"
          >
          </path>
        </svg>
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"exclamation\\"
             class=\\"svg-inline--fa fa-exclamation fa-w-6 fa-stack-1x text-white\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 192 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z\\"
          >
          </path>
        </svg>
      </div>
      <div class=\\"flex-shrink-1 flex-grow-1 align-self-center ms-1 me-3 text-break text-wrap\\">
        <div>
          <div>
            Alertmanager am3 raised an error
          </div>
          <div>
            <code>
              error 2
            </code>
          </div>
        </div>
      </div>
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-top\\">
        <span class=\\"badge components-label cursor-pointer with-click with-click-dark\\">
          <svg aria-hidden=\\"true\\"
               focusable=\\"false\\"
               data-prefix=\\"fas\\"
               data-icon=\\"times\\"
               class=\\"svg-inline--fa fa-times fa-w-11 \\"
               role=\\"img\\"
               xmlns=\\"http://www.w3.org/2000/svg\\"
               viewbox=\\"0 0 352 512\\"
          >
            <path fill=\\"currentColor\\"
                  d=\\"M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z\\"
            >
            </path>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
"
`;
